--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "instadrafts-lawyer-web",
-  "version": "0.1.0",
+  "name": "@instadraft/lawyer-web",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.2.35",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "lucide-react": "^0.471.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.35",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.7.3",
+    "@types/node": "^22.10.7",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
